Delete old stuff, fix java 21